fix icons footer position on mobile phone

--- a/assets/css/styles_mobile.css
+++ b/assets/css/styles_mobile.css
@@ -1,4 +1,8 @@
 @media (max-width: 767px) {
+    .link_socmed_footer {
+        margin: 12px 5px 12px 5px;
+    }
+
     .mt290 {
         margin-top: 290px;
     }
